08_mtls/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  namespace: training
  name: default
spec:
  mtls:
    mode: STRICT
