08_mtls/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  namespace: training
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - "*"
