08_mtls/blue-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  namespace: training
  name: blue
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
      - uri:
          prefix: /blue/
      rewrite:
        uri: /
      route:
        - destination:
            host: blue.training
