08_mtls/green-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  namespace: training
  name: green
spec:
  hosts:
    - green.training.svc.cluster.local
  gateways:
    - gateway
  http:
    - match:
      - uri:
        prefix: /green/
      rewrite:
        uri: /
      route:
        - destination:
            host: green.training.svc.cluster.local
